--- a/Adaptive_Sine_Function_Approximation_for_Tolerance.ipynb
+++ b/Adaptive_Sine_Function_Approximation_for_Tolerance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTzEiEBkD2K82dBIxUCOvq",
+      "authorship_tag": "ABX9TyN60oAv2FFuQSrymnjxDajw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,12 +34,12 @@
       "metadata": {
         "id": "tFt5wAkZ0s2l"
       },
-      "execution_count": 34,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 27,
       "metadata": {
         "id": "vn_WGzrMulWR"
       },
@@ -66,10 +66,15 @@
         "    return y_double_prime\n",
         "\n",
         "# Calculate midpoints and errors\n",
-        "def calculate_midpoints_and_errors(theta, y):\n",
-        "    midpoints = (theta[:-1] + theta[1:]) / 2\n",
-        "    interpolated_y = y[:-1] + (y[1:] - y[:-1]) / (theta[1:] - theta[:-1]) * (midpoints - theta[:-1])\n",
-        "    actual_y = np.sin(midpoints)\n",
+        "def calculate_x_with_max_error(theta, y):\n",
+        "    # x = arccos(m) is the point with max error\n",
+        "    x_with_max_error = np.zeros(len(y)-1)\n",
+        "    for i in range(1, len(y)):\n",
+        "        slope = (y[i] - y[i-1]) / (theta[i] - theta[i-1])\n",
+        "        x_with_max_error[i-1] = np.arccos(slope)\n",
+        "\n",
+        "    interpolated_y = y[:-1] + (y[1:] - y[:-1]) / (theta[1:] - theta[:-1]) * (x_with_max_error - theta[:-1])\n",
+        "    actual_y = np.sin(x_with_max_error)\n",
         "    errors = np.abs(actual_y - interpolated_y)\n",
         "\n",
         "    # Find the index of the maximum error\n",
@@ -97,7 +102,7 @@
         "        y_double_prime = central_difference_second_derivative(y, theta, theta[1] - theta[0])\n",
         "\n",
         "        # Calculate errors and get the max error\n",
-        "        max_error, errors, max_error_theta_pair = calculate_midpoints_and_errors(theta, y)\n",
+        "        max_error, errors, max_error_theta_pair = calculate_x_with_max_error(theta, y)\n",
         "\n",
         "        # Adaptive step size calculation\n",
         "        error_ratio = max_error / tolerance\n",
@@ -120,6 +125,7 @@
         "            break\n",
         "\n",
         "        iteration += 1  # Increment iteration count\n",
+        "        print(f\"Iteration {iteration}: num_elements = {num_elements}, max_error = {max_error}\")\n",
         "\n",
         "    if iteration == max_iterations:\n",
         "        print(\"Max iterations reached. The solution may not have converged.\")\n",
@@ -153,7 +159,7 @@
         "\n",
         "        # Calculate the second derivative for the modified theta\n",
         "        y_double_prime = non_uniform_central_difference_second_derivative(temp_y, temp_theta)\n",
-        "        max_error, errors, max_error_theta_pair = calculate_midpoints_and_errors(temp_theta, temp_y)\n",
+        "        max_error, errors, max_error_theta_pair = calculate_x_with_max_error(temp_theta, temp_y)\n",
         "\n",
         "        # Find the max absolute second derivative in the updated array\n",
         "        max_second_derivative = np.max(np.abs(y_double_prime))\n",
@@ -173,7 +179,7 @@
       "metadata": {
         "id": "dQCxYE2Ru4r7"
       },
-      "execution_count": 36,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -194,7 +200,7 @@
       "metadata": {
         "id": "SFg-s5zc6ATJ"
       },
-      "execution_count": 37,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -217,14 +223,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dN2ECdP1yOzl",
-        "outputId": "2f8c5fe2-200e-4c4f-a4c1-bf2613990f4e"
+        "outputId": "3d4cc96d-643f-441e-89ec-c5ae2bcdc202"
       },
-      "execution_count": 53,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Iteration 1: num_elements = 47, max_error = 0.0037908277228748677\n",
+            "Iteration 2: num_elements = 31, max_error = 0.00014573378653603974\n",
             "For num_elements = 31:\n",
             "Max error = 0.000343, between = (1.5184364492350666, 1.5707963267948966)\n",
             "Max second derivative = 0.998401 at theta = 1.5184\n"
@@ -250,7 +258,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 30
         }
       ]
     },
@@ -275,19 +283,19 @@
           "height": 582
         },
         "id": "3qUmneWBIOlV",
-        "outputId": "8b2d79b7-88b6-403b-cf10-a835a1add9f7"
+        "outputId": "248d533d-4535-45b2-a336-57f6fbf64d14"
       },
-      "execution_count": 54,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7b046c7daf80>"
+              "<matplotlib.legend.Legend at 0x7d0c938944c0>"
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 33
         },
         {
           "output_type": "display_data",
@@ -322,19 +330,19 @@
           "height": 582
         },
         "id": "UcKgVbyC07Fo",
-        "outputId": "578a43d2-b7a5-4aaa-b0d1-fed1dd11bc4d"
+        "outputId": "9446e0d2-d72f-40fc-84b2-6aa31bd1d02f"
       },
-      "execution_count": 55,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7b046c57db40>"
+              "<matplotlib.legend.Legend at 0x7d0cd80bb8e0>"
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 34
         },
         {
           "output_type": "display_data",
@@ -354,7 +362,7 @@
       "metadata": {
         "id": "pUxKexGcIyev"
       },
-      "execution_count": 41,
+      "execution_count": 32,
       "outputs": []
     }
   ]
